--- a/docs/📚 读书.md
+++ b/docs/📚 读书.md
@@ -17,3 +17,12 @@
 - [ ] 《大型分布式网站架构设计与实践》
 - [ ] 《深入分布式缓存：从原理到实践》
 - [ ] ……
+
+
+
+## 前端
+
+- [ ] [JavaScript 教程](https://wangdoc.com/javascript/)
+- [ ] [ECMAScript 6 教程](https://wangdoc.com/es6/)
+- [x] [TypeScript 教程](https://wangdoc.com/typescript/)
+- [ ] ……
